Fix plugin name 2

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ repositories {
 
     mavenCentral()
     maven { url "https://jitpack.io" }
+    maven { url = 'https://maven.maxhenkel.de/repository/public' }
     maven {
         name = "papermc-repo"
         url = "https://repo.papermc.io/repository/maven-public/"
@@ -46,7 +47,7 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 processResources {
-    def props = [version: version,group: rootProject.group]
+    def props = [version: version,name: rootProject.name]
     inputs.properties props
     filteringCharset 'UTF-8'
     filesMatching('paper-plugin.yml') {
