Create lobby world and teleport peeps there if event hasn't started.

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,3 +1,7 @@
 {
-  "session_time": 120
+  "session_time": 30,
+  "world_border": 20,
+  "border_shrink_delay": 1,
+  "play_world": "world",
+  "lobby_world": "lobby"
 }
