--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
 group = com.github.QuickScythe
+author = QuickScythe
 version = 0.1.1-SNAPSHOT
-shadow_utils_version = 0.1.23-SNAPSHOT
+shadow_utils_version = 1.0.9-BETA
 voicechat_api_version = 2.5.20
+minecraft_version = 1.21
+craft_bukkit_build = R0.1-SNAPSHOT
+paper_build = R0.1-SNAPSHOT
