--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
 group = com.github.QuickScythe
 author = QuickScythe
 version = 0.1.1-SNAPSHOT
-shadow_utils_version = 1.0.9-BETA
-voicechat_api_version = 2.5.20
+plugin_version = ${version}
+shadow_utils_version = 1.0.16-BETA
+shadow_utils_build = 98
+voicechat_api_version = 2.5.0
 minecraft_version = 1.21
 craft_bukkit_build = R0.1-SNAPSHOT
 paper_build = R0.1-SNAPSHOT
