--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = com.github.QuickScythe
 author = QuickScythe
 version = 0.1.1-SNAPSHOT
-plugin_version = ${version}
+plugin_version = 0.1.1-SNAPSHOT
 shadow_utils_version = 1.0.16-BETA
 shadow_utils_build = 98
 voicechat_api_version = 2.5.0
