--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ repositories {
 }
 
 dependencies {
-    implementation "com.github.QuickScythe:shadow_utils:${shadow_utils_version}:${shadow_utils_build}"
+    implementation "com.github.QuickScythe:shadow_utils:${shadow_utils_version}"
 //    compileOnly("io.papermc.paper:paper-api:${minecraft_version}-${paper_build}")
 
 //
